List component wrapped in rows // quick fix for philantropy hub

--- a/web/themes/custom/milken/scss/_hub.scss
+++ b/web/themes/custom/milken/scss/_hub.scss
@@ -7,6 +7,7 @@
       color: #666;
       box-shadow: 0 5px 15px rgba(0,0,0,.08);
       border: 1px solid #EFEFEF;
+      margin-bottom: 1rem;
 
       &-body {
         padding: 2rem;
@@ -37,6 +38,12 @@
     }
 
     .list-component {
+      display: block !important;
+      margin-left: 0;
+      margin-right: 0;
+      -webkit-column-gap: 1.25rem;
+      -moz-column-gap: 1.25rem;
+      column-gap: 1.25rem;
 
       @media (min-width: 1400px) {
           column-count: 4;
